--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,108 @@ body{
 .frm input{
     border-radius: 10%;
 }
+
+.intro
+{
+    margin-top: 30px;
+    margin-left: 50px;
+    padding-top: 60px;
+}
+
+.intro li {
+    font-size: 18px;
+}
+.intro img{
+    padding: 0%;
+    margin: 0%;
+    position: relative;
+    left: 800px;
+}
+
+/* #snackbar {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color:black;
+    color:white;
+    text-align: center;
+    border-radius: 25px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    bottom: 30px;
+  }
+  
+ 
+  #snackbar.show {
+    visibility: visible;
+   /* -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;*/
+    /* animation: fadein 0.5s, fadeout 0.5s 4.5s; 
+  }
+  
+
+  @-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+  }
+  
+  @-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+  }
+  
+  @keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;} */
+/* }  */ 
+
+
+#snackbar {
+    visibility: hidden;
+    max-width: 250px;
+    margin-left: 420px;
+    background-color:black;
+    color: #fff;
+    text-align: center;
+    border-radius: 20px;
+    padding: 16px;
+    position: fixed;
+    left: 100px;
+    z-index: 1;
+    right:0;
+    bottom: 30px;
+    font-size: 17px;
+}
+
+#snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 3.5s;
+    animation: fadein 0.5s, fadeout 0.5s 3.5s;
+}
+
+@-webkit-keyframes fadein {
+    from {bottom: 0; opacity: 0;} 
+    to {bottom: 30px; opacity: 1;}
+}
+
+@keyframes fadein {
+    from {bottom: 0; opacity: 0;}
+    to {bottom: 30px; opacity: 1;}
+}
+
+@-webkit-keyframes fadeout {
+    from {bottom: 30px; opacity: 1;} 
+    to {bottom: 0; opacity: 0;}
+}
+
+@keyframes fadeout {
+    from {bottom: 30px; opacity: 1;}
+    to {bottom: 0; opacity: 0;}
+}
+
