--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,21 @@ body{
     left: 800px;
 }
 
+#submt{
+background-color: orangered;
+padding: 1.5%;
+font-size: 20px;
+border-radius: 25px;
+text-decoration: none  ;
+position: relative;
+left :220px;
+}
+
+#submt :hover{
+    background-color:wheat;
+
+}
+
 /* #snackbar {
     visibility: hidden;
     min-width: 250px;
@@ -152,4 +167,5 @@ body{
     margin-top: 10%;
     margin-left: 20%;
     text-align: center;
+    
   }
